# agent-killswitch

./: .gitignore  DEVPOST_SUBMISSION.md  README.md  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/: app.html
dashboard/src/lib/: api.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/static/: manifest.json
deploy/: deploy-functions.sh  setup-azure.sh
examples/: demo_script.md  guarded_agent.py  persistent_attacker.py  rogue_agent.py
killswitch/: __init__.py  _action_log.py  _config.py  _erosion.py  _http.py  _kill.py  _metrics.py  _monitor.py  _persistence.py  _policy.py
killswitch/guardrails/: __init__.py  _cli.py  _egress.py  _scanner.py  _validator.py
server/: function_app.py
tests/: test_persistence.py  test_policy.py
