[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-killswitch"
version = "0.4.0"
description = "Emergency stop and safety guardrails for AI agents. One line to add, one tap to kill."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tsubasa Y"}]
requires-python = ">=3.10"
dependencies = []
keywords = ["ai", "agents", "safety", "killswitch", "guardrails", "monitoring", "emergency-stop", "credentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

[project.scripts]
killswitch-scan = "killswitch.guardrails._cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/tsubasa-rsrch/agent-killswitch"
Repository = "https://github.com/tsubasa-rsrch/agent-killswitch"

[tool.setuptools.packages.find]
include = ["killswitch*"]
